objects/Part_Manufucturer__c.object
<CustomObject>
    <fields>
        <fullName>Average_Lead_Time__c</fullName>
        <label>Average Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Invoice_Cost__c</fullName>
        <label>Last Invoice Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Description__c</fullName>
        <label>Manufacturer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Type__c</fullName>
        <label>Manufacturer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Secondary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Part_Manufacturer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Part_Manufucturer</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Part Manufacturer</label>
    <nameField>
        <label>Part Manufucturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Manufucturer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>